--- a/FinalProject.Web/Views/Event/_Reviews.cshtml
+++ b/FinalProject.Web/Views/Event/_Reviews.cshtml
@@ -16,7 +16,7 @@
             <th>Name</th>
             <th>Created On</th>  
             <th>Comment</th>       
-            <th class="text-end">Rating</th>  
+            <th>Rating</th>  
         </tr>
     </thead>
     <tbody>
