--- a/FinalProject.Web/Views/Event/Delete.cshtml
+++ b/FinalProject.Web/Views/Event/Delete.cshtml
@@ -6,7 +6,7 @@
     <h3 class="text-primary">Delete Event</h3>
   </div>
 
-  <h4 class="my-3 text-danger">Are you sure you want to delete this movie?</h4>
+  <h4 class="my-3 text-danger">Are you sure you want to delete this event?</h4>
 
   <!-- display the event using a <dl> as per Details.cshtml -->
   <dl class="row">
