--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -35,21 +35,20 @@
 
             <!-- Navigation links -->
             <div>
-                <!-- Edit Button visible to admin and support -->
-                <a asp-condition=@User.HasOneOfRoles("admin,support") asp-action="Edit" asp-route-id="@Model.Id"
-                    class="btn btn-sm btn-secondary">
-                    <i class="bi bi-pencil"></i>
-                    <span>Edit</span>
-                </a>
+                @if (User.IsInRole("admin"))
+                {
+                    <!-- Edit Button visible to admin and support -->
+                    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-sm btn-secondary">
+                        <i class="bi bi-pencil"></i>
+                        <span>Edit</span>
+                    </a>
 
-                <!-- Delete button visible to admin -->
-                <a asp-condition=@User.IsInRole("admin") asp-controller="Event" asp-action="Delete" asp-route-id="@Model.Id"
-    using SQLitePCL;
-    using Microsoft.EntityFrameworkCore.Migrations;
-                    class="btn btn-sm btn-danger">
-                    <i class="bi bi-trash"></i>
-                    <span>Delete</span>
-                </a>
+                    <!-- Delete button visible to admin -->
+                    <a asp-controller="Event" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-sm btn-danger">
+                        <i class="bi bi-trash"></i>
+                        <span>Delete</span>
+                    </a>
+                }
             </div>
         </div>
 
@@ -66,10 +65,10 @@
         </div>
 
         @* <div class="col-4">
-            <img asp-condition="@(!string.IsNullOrEmpty(Model.ImageUrl))" src="@Model.ImageUrl" class="img-fluid w-50"
-                alt="Event Location Image" />
-            <span asp-condition="@string.IsNullOrEmpty(Model.ImageUrl)" class="text-muted"
-                aria-label="missing location image">No image available</span>
+        <img asp-condition="@(!string.IsNullOrEmpty(Model.ImageUrl))" src="@Model.ImageUrl" class="img-fluid w-50"
+        alt="Event Location Image" />
+        <span asp-condition="@string.IsNullOrEmpty(Model.ImageUrl)" class="text-muted"
+        aria-label="missing location image">No image available</span>
         </div> *@
 
     </div>
