--- a/FinalProject.Web/Views/Post/CommentDelete.cshtml
+++ b/FinalProject.Web/Views/Post/CommentDelete.cshtml
@@ -1,12 +1,5 @@
 @model Comment
 
-<partial name="_BreadCrumbs" model=@(new [] {
-    ("/","Home"),
-    ("/post","Posts"),
-    ($"/post/details/{Model.PostId}", $"{Model.Post.Title}"),
-    ("","Delete Comment")
-}) />
-
 <div class="card rounded shadow p-4">
     <!-- Title bar -->
     <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
@@ -15,13 +8,19 @@
 
     <h5 class="my-3 text-danger">Are you sure you want to delete this comment?</h5>
 
-    <!-- display the movie using a <dl> as per Details.cshtml -->   
+    <!-- display the post using a <dl> as per Details.cshtml -->   
     <dl class="row mt-3">       
-        <dt class="col-5">User</dt>
-        <dd class="col-7">@Model.User.Name</dd>
+        <dt class="col-5">Post</dt>
+        <dd class="col-7">@Model.Post.Title</dd>
 
         <dt class="col-5">Comment</dt>
-        <dd class="col-7">@Model.Content</dd>
+        <dd class="col-7">@Model.Comments</dd>
+
+        <dt class="col-5">CreatedBy</dt>
+        <dd class="col-7">@Model.CreatedBy</dd>
+
+        <dt class="col-5">Created On</dt>
+        <dd class="col-7">@Model.CreatedAt</dd>
         
          @if (!string.IsNullOrEmpty(Model.ImagePath))
         {
@@ -38,12 +37,12 @@
 
     <div class="mt-4">
         <!-- use a form to confirm deletion -->
-        <form asp-asp-controller="Comment" asp-action="Delete" method="post">   
+        <form asp-action="PostDeleteConfirm" type="post">   
             <input type="hidden" asp-for="Id"/>
             <input type="hidden" asp-for="PostId"/>
 
             <button type="submit" class="btn btn-danger" aria-label="confirm">Confirm</button>
-            <a class="btn btn-secondary" asp-controller="Post" asp-action="Details" asp-route-id="@Model.PostId" aria-label="cancel" >Cancel</a>
+            <a class="btn btn-secondary" asp-controller="Post" asp-action="Details" asp-route-id="@Model.Post.Title" aria-label="cancel" >Cancel</a>
         </form>
     </div>
     
