--- a/FinalProject.Web/Views/Post/Delete.cshtml
+++ b/FinalProject.Web/Views/Post/Delete.cshtml
@@ -6,7 +6,7 @@
     <h3 class="text-primary">Delete Post</h3>
   </div>
 
-  <h4 class="my-3 text-danger">Are you sure you want to delete this movie?</h4>
+  <h4 class="my-3 text-danger">Are you sure you want to delete this post?</h4>
 
   <!-- display the post using a <dl> as per Details.cshtml -->
   <dl class="row">
@@ -20,7 +20,7 @@
     <dd class="col-8 pb-1">@Model.ImagePath</dd>
 
     <dt class="col-4 pb-1">Posted By</dt>
-    <dd class="col-8 pb-1">@Model.User.Name</dd>
+    <dd class="col-8 pb-1">@Model.CreatedBy</dd>
   </dl>
 
   <div class="mt-4">
