--- a/FinalProject.Web/Views/Post/Index.cshtml
+++ b/FinalProject.Web/Views/Post/Index.cshtml
@@ -25,7 +25,7 @@
             </th>
             <th>
                 Posted By
-                <vc:sort-link column="user.name" />
+                <vc:sort-link column="createdBy" />
             </th>
             <th>
                 Posted On
@@ -40,7 +40,7 @@
             <tr>
                 <td>@p.Id</td>
                 <td>@p.Title</td>
-                <td>@p.User.Name</td>
+                <td>@p.CreatedBy</td>
                 <td>@p.CreatedAt</td>
                 <td>
                     <a class="btn btn-green" asp-controller="Post" asp-action="Details" asp-route-id="@p.Id">Details</a>
