--- a/FinalProject.Web/Views/Post/Create.cshtml
+++ b/FinalProject.Web/Views/Post/Create.cshtml
@@ -31,7 +31,7 @@
         <div class="row mt-3">
             <div class="col">
                 <label class="form-label" for="PostImage">Upload Image</label>
-                <input type="file" name="PostImage" class="form-control" accept="image/*" />
+                <input type="url" name="PostImage" class="form-control" accept="image/*" />
             </div>
         </div>
 
@@ -45,8 +45,8 @@
 
         <div class="row mt-4">
             <div class="col">
-                <input type="submit" value="Create" class="btn btn-primary" />
-                <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Index">Cancel</a>
+                <input type="submit" value="Create" class="btn btn-green" />
+                <a class="btn btn-link ms-3 cancel-link" asp-controller="Post" asp-action="Index">Cancel</a>
             </div>
         </div>
     </form>
