--- a/FinalProject.Web/Views/Post/Details.cshtml
+++ b/FinalProject.Web/Views/Post/Details.cshtml
@@ -42,6 +42,11 @@
                         <span>Edit</span>
                     </a>
 
+                    @* <button class="btn btn-sm btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal-@Model.Id">
+                <i class="bi bi-trash"></i>
+                <span>Delete</span>
+                </button> *@
+
                     <!-- Delete button visible to admin -->
                     <a asp-controller="Post" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-sm btn-danger">
                         <i class="bi bi-trash"></i>
