--- a/FinalProject.Web/Views/Post/Edit.cshtml
+++ b/FinalProject.Web/Views/Post/Edit.cshtml
@@ -34,13 +34,13 @@
         </div>
 
         <div class="mt-3">
-            <label asp-for="ImagePath" class="form-label"></label>
+            <label asp-for="ImagePath" class="form-label">Update Image</label>
             <input asp-for="ImagePath" type="url" class="form-control" />
             <span asp-validation-for="ImagePath" class="text-danger"></span>
         </div>
 
         <div class="mt-3">
-            <label asp-for="CreatedBy" class="form-label"></label>
+            <label asp-for="CreatedBy" class="form-label">Edited By</label>
             <input asp-for="CreatedBy" class="form-control" />
             <span asp-validation-for="CreatedBy" class="text-danger"></span>
         </div>
