--- a/FinalProject.Web/Views/_ViewImports.cshtml
+++ b/FinalProject.Web/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using FinalProject.Web
 @using FinalProject.Web.Models
 @using FinalProject.Web.Models.User
+@using FinalProject.Web.Models.Contact
 @using FinalProject.Web.Views.Shared.Components
 @using FinalProject.Data.Extensions
 @addTagHelper *, FinalProject.Web
