--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -41,7 +41,7 @@
                 <li><a class="dropdown-item" asp-controller="Gallery" asp-action="Past">Past Events Gallery</a></li>
                 @if (User.Identity.IsAuthenticated)
                     {
-                        <li><a class="dropdown-item" asp-controller="User" asp-action="Calendar">Calendar</a></li>
+                        <li><a class="dropdown-item" asp-controller="County" asp-action="Index">Calendar</a></li>
                     }
             </ul>
         </li>
