--- a/FinalProject.Web/Views/_ViewImports.cshtml
+++ b/FinalProject.Web/Views/_ViewImports.cshtml
@@ -6,5 +6,6 @@
 @using FinalProject.Web.Models.Contact
 @using FinalProject.Web.Views.Shared.Components
 @using FinalProject.Data.Extensions
+@using FinalProject.Web.Models.CalendarModels
 @addTagHelper *, FinalProject.Web
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
