--- a/FinalProject.Web/Views/User/UpdatePassword.cshtml
+++ b/FinalProject.Web/Views/User/UpdatePassword.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
   
-    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-dark p-2">
+    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
         <svg class="text-white" width="28" height="28" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-key-fill" viewBox="0 0 16 16">
           <path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
         </svg>
