--- a/FinalProject.Web/Views/User/UpdateProfile.cshtml
+++ b/FinalProject.Web/Views/User/UpdateProfile.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
   
-    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-dark p-2">
+    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 lock-image">
         <svg class="text-white" width="28" height="28" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
           <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"/>
         </svg>
