added profile page - not finished yet

--- a/FinalProject.Web/Views/User/Index.cshtml
+++ b/FinalProject.Web/Views/User/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h3 class="mb-3">User List</h3>
   
-<table class="table table-hover">
+<table class="table table-hover user">
     <thead>
         <tr>
             <th>
@@ -28,10 +28,15 @@
                 <td>@u.Name</td>
                 <td>@u.Email</td>
                 <td>@u.Role</td>  
-                <td>
-                    <a asp-action="Update" asp-route-id="@u.Id">
-                        <i class="bi bi-pencil-fill"></i>
-                    </a>                    
+                <td class="user-icon">
+                    <a asp-action="Update" asp-route-id="@u.Id" title="Edit User">
+                        <i class="bi bi-pencil-fill user-icon"></i>
+                    </a>
+
+                    <!-- Link to profile page -->  
+                    <a asp-action="Profile" asp-route-id="@u.Id" title="View Profile" class="ms-2">
+                        <i class="bi bi-person-circle user-icon"></i>
+                    </a>                  
                 </td>                
             </tr>
         }        
