--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -1,113 +1,127 @@
- <!-- replace navbar-dark bg-dark with navbar-light bg-white to change to light navbar -->
- <nav class="navbar navbar-expand-lg navbar-light custom-green shadow-lg rounded mb-3">
-       
-  <div class="container-fluid">
+<!-- replace navbar-dark bg-dark with navbar-light bg-white to change to light navbar -->
+<nav class="navbar navbar-expand-lg navbar-light custom-green shadow-lg rounded mb-3">
 
-    <!-- Woof & Wander -->
-    <a class="navbar-brand" href="#">
-        <img src="~/images/logo/logo.jpg" alt="Woof & Wander Logo" class="navbar-logo d-inline-block align-text-top">
-        Woof & Wander</a>
+    <div class="container-fluid">
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- Woof & Wander -->
+        <a class="navbar-brand" href="#">
+            <img src="~/images/logo/logo.jpg" alt="Woof & Wander Logo"
+                class="navbar-logo d-inline-block align-text-top">
+            Woof & Wander</a>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      
-      <!-- LEFT SIDE NAVBAR ITEMS me-auto pushes to left -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <!-- individual nav item -->
-        <li class="nav-item">
-            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>   
-        </li>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-        <li class="nav-item" asp-condition=@User.HasOneOfRoles("admin")>
-            <a class="nav-link" asp-controller="User" asp-action="Index">Users</a>   
-        </li>
-        
-        <!-- Post menu item --> 
-        <li class="nav-item">
-            <a class="nav-link" asp-controller="Post" asp-action="Index">Community</a>
-        </li>
+            <!-- LEFT SIDE NAVBAR ITEMS me-auto pushes to left -->
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-        <!-- Events dropdown menu item -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="eventsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Events
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="eventsDropdown">
-                <li><a class="dropdown-item" asp-controller="Event" asp-action="Index">Events</a></li>
-                <li><a class="dropdown-item" asp-controller="Gallery" asp-action="Past">Past Events Gallery</a></li>
-                @if (User.Identity.IsAuthenticated)
-                    {
-                        <li><a class="dropdown-item" asp-controller="County" asp-action="Index">Calendar</a></li>
-                    }
+                <!-- individual nav item -->
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                </li>
+
+                <li class="nav-item" asp-condition=@User.HasOneOfRoles("admin")>
+                    <a class="nav-link" asp-controller="User" asp-action="Index">Users</a>
+                </li>
+
+                <!-- Post menu item -->
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="Post" asp-action="Index">Community</a>
+                </li>
+
+                <!-- Events dropdown menu item -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="eventsDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Events
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="eventsDropdown">
+                        <li><a class="dropdown-item" asp-controller="Event" asp-action="Index">Events</a></li>
+                        <li><a class="dropdown-item" asp-controller="Gallery" asp-action="Past">Past Events Gallery</a>
+                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li><a class="dropdown-item" asp-controller="County" asp-action="Index">Calendar</a></li>
+                        }
+                    </ul>
+                </li>
+
+                <!-- Recommendations dropdown menu item -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Recommendations
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Products">Products</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Breed">Breeds</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Recipes">Recipes</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Training">Training</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Vets">Vets</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Locations">Locations</a></li>
+                    </ul>
+                </li>
+
+                <!-- example dropdown menu item -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Company
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a class="dropdown-item" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
+                        <li><a class="dropdown-item" asp-controller="Contact" asp-action="Contact">Contact Us</a></li>
+                    </ul>
+                </li>
+
             </ul>
-        </li>
 
-        <!-- Recommendations dropdown menu item -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Recommendations
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Products">Products</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Breed">Breeds</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Recipes">Recipes</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Training">Training</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Vets">Vets</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Locations">Locations</a></li>
+
+            <!-- DONT EDIT -- RIGHT SIDE AUTHENTICATION ITEMS ms-auto pushes to right -->
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+                <!-- UNAUTHENTICATED LINKS -->
+                <li class="nav-item" asp-condition="@(!User.Identity.IsAuthenticated)">
+                    <a class="nav-link" asp-controller="User" asp-action="Login">Login</a>
+                </li>
+                <li class="nav-item" asp-condition="@(!User.Identity.IsAuthenticated)">
+                    <a class="nav-link" asp-controller="User" asp-action="Register">Register</a>
+                </li>
+
+                <!-- AUTHENTICATED DROPDOWN -->
+                <li class="nav-item dropdown" asp-condition="@User.Identity.IsAuthenticated">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        @User.Identity.Name
+                    </a>
+                    <!-- dropdown-menu-end ensures menu displays within the viewport, even near the right edge. -->
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" asp-controller="User" asp-action="Profile"
+                                asp-route-id="@User.GetSignedInUserId()"><i class="bi bi-person-circle"></i> View Profile</a></li>
+                        <li><a class="dropdown-item" asp-controller="User" asp-action="UpdateProfile"><i
+                                    class="bi bi-gear"></i> Update Profile</a></li>
+                        <li><a class="dropdown-item" asp-controller="User" asp-action="UpdatePassword"><i
+                                    class="bi bi-lock-fill"></i> Update Password</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <form asp-controller="User" asp-action="Logout">
+                                <button type="submit" class="dropdown-item btn btn-link"><i
+                                        class="bi bi-person-dash-fill"></i> Logout</button>
+                            </form>
+                        </li>
+                    </ul>
+                </li>
+
             </ul>
-        </li>
 
-        <!-- example dropdown menu item -->
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Company
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="About">About</a></li>
-                <li><a class="dropdown-item" asp-controller="Home" asp-action="Privacy">Privacy</a></li>
-                <li><a class="dropdown-item" asp-controller="Contact" asp-action="Contact">Contact Us</a></li>
-            </ul>
-        </li>
-
-      </ul>      
-
-
-      <!-- DONT EDIT -- RIGHT SIDE AUTHENTICATION ITEMS ms-auto pushes to right -->
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0" >
-        
-          <!-- UNAUTHENTICATED LINKS -->
-          <li class="nav-item" asp-condition="@(!User.Identity.IsAuthenticated)">
-              <a class="nav-link" asp-controller="User" asp-action="Login">Login</a>
-          </li>
-          <li class="nav-item" asp-condition="@(!User.Identity.IsAuthenticated)">
-              <a class="nav-link" asp-controller="User" asp-action="Register">Register</a>
-          </li>
-
-          <!-- AUTHENTICATED DROPDOWN -->
-          <li class="nav-item dropdown" asp-condition="@User.Identity.IsAuthenticated">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  @User.Identity.Name
-              </a>
-              <!-- dropdown-menu-end ensures menu displays within the viewport, even near the right edge. -->
-              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" asp-controller="User" asp-action="UpdateProfile"><i class="bi bi-gear"></i> Update Profile</a></li>
-                  <li><a class="dropdown-item" asp-controller="User" asp-action="UpdatePassword"><i class="bi bi-lock-fill"></i> Update Password</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li>
-                      <form asp-controller="User" asp-action="Logout">
-                              <button type="submit" class="dropdown-item btn btn-link"><i class="bi bi-person-dash-fill"></i> Logout</button>
-                      </form>
-                  </li>
-              </ul>
-          </li>
-
-      </ul>
+        </div>
 
     </div>
-
-  </div>
 </nav>
