--- a/FinalProject.Web/Views/User/Register.cshtml
+++ b/FinalProject.Web/Views/User/Register.cshtml
@@ -2,9 +2,12 @@
 
 <div class="card shadow p-4 mt-5 mx-auto w-75">
     <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2">
-        <svg class="text-white" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-person-fill-add" viewBox="0 0 16 16">
-            <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0Zm-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
-            <path d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Z"/>
+        <svg class="text-white" xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
+            class="bi bi-person-fill-add" viewBox="0 0 16 16">
+            <path
+                d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0Zm-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+            <path
+                d="M2 13c0 1 1 1 1 1h5.256A4.493 4.493 0 0 1 8 12.5a4.49 4.49 0 0 1 1.544-3.393C9.077 9.038 8.564 9 8 9c-5 0-6 3-6 4Z" />
         </svg>
     </div>
 
@@ -40,15 +43,28 @@
             </div>
         </div>
 
+        <div class="col mt-3">
+            <label asp-for="DogBreed" class="form-label">Dog Breed</label>
+            <input asp-for="DogBreed" class="form-control" />
+            <span asp-validation-for="DogBreed" class="text-danger"></span>
+        </div>
+
+        <div class="col mt-3">
+            <label asp-for="ProfileImage" class="form-label">Profile Image</label>
+            <input type="file" asp-for="ProfileImage" class="form-control" />
+            <span asp-validation-for="ProfileImage" class="text-danger"></span>
+        </div>
+
+
         @* <div class="mt-3">
-            <label asp-for="Role" class="form-label"><i class="bi-person-badge-fill"></i> Role</label>
-            <select asp-for="Role" asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
-                <option>Select Role</option>
-            </select>
-            <span asp-validation-for="Role" class="text-danger"></span>
+        <label asp-for="Role" class="form-label"><i class="bi-person-badge-fill"></i> Role</label>
+        <select asp-for="Role" asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
+        <option>Select Role</option>
+        </select>
+        <span asp-validation-for="Role" class="text-danger"></span>
         </div> *@
 
-         <div class="mt-3">
+        <div class="mt-3">
             <input type="submit" value="Register" class="btn btn-primary" />
             @* <a class="btn btn-secondary" asp-controller="User" asp-action="Login">Cancel</a> *@
             <a class="btn btn-link ms-3" asp-controller="User" asp-action="Login">Already have an account?</a>
@@ -58,5 +74,7 @@
 </div>
 
 @section Scripts {
-@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
