--- a/FinalProject.Web/Views/User/Update.cshtml
+++ b/FinalProject.Web/Views/User/Update.cshtml
@@ -28,6 +28,18 @@
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
 
+        <div class="col mt-3">
+            <label asp-for="DogBreed" class="form-label">Dog Breed</label>
+            <input asp-for="DogBreed" class="form-control" />
+            <span asp-validation-for="DogBreed" class="text-danger"></span>
+        </div>
+
+        <div class="col mt-3">
+            <label asp-for="ProfileImage" class="form-label">Profile Image</label>
+            <input type="file" asp-for="ProfileImage" class="form-control" />
+            <span asp-validation-for="ProfileImage" class="text-danger"></span>
+        </div>
+
         <div class="mt-3">
             <label asp-for="Role" class="form-label"><i class="bi-person-badge-fill"></i> Role</label>
             <select asp-for="Role" asp-items="Html.GetEnumSelectList<Role>()" class="form-control">
