changed label names and colours of buttons

--- a/FinalProject.Web/wwwroot/css/site.css
+++ b/FinalProject.Web/wwwroot/css/site.css
@@ -728,6 +728,10 @@ footer .container {
 }
 
 /***************************************************Community Posts*/
+.community-details {
+  color: #004d2a;
+}
+
 .hero-section-post {
   position: relative;
   height: 300px;
