--- a/FinalProject.Web/Views/Post/CommentCreate.cshtml
+++ b/FinalProject.Web/Views/Post/CommentCreate.cshtml
@@ -4,7 +4,7 @@
     
     <!-- Title bar -->
     <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
-        <h3 class="text-primary">Create Comment</h3>
+        <h3>Create Comment</h3>
     </div>
 
     <form asp-action="CommentCreate">
@@ -14,25 +14,25 @@
         <input type="hidden" asp-for="PostId" />
 
         <div class="mt-3">
-            <label asp-for="Comments" class="form-label"></label>      
-            <textarea rows="5" asp-for="Comments" class="form-control"></textarea>
+            <label asp-for="Comments" class="form-label">Help the community!</label>      
+            <textarea rows="5" asp-for="Comments" class="form-control" placeholder="Add your comment here..."></textarea>
             <span asp-validation-for="Comments" class="text-danger"></span>
         </div>
 
         <div class="mt-3">
-            <label asp-for="CreatedBy" class="form-label"></label>      
-            <input asp-for="CreatedBy" class="form-control"/>
+            <label asp-for="CreatedBy" class="form-label">Comment Left By:</label>      
+            <input asp-for="CreatedBy" class="form-control" placeholder="Add your name..."/>
             <span asp-validation-for="CreatedBy" class="text-danger"></span>
         </div>
 
         <div class="mt-3">
-            <label asp-for="CreatedAt" class="form-label"></label>      
+            <label asp-for="CreatedAt" class="form-label">Comment Left  At:</label>      
             <input asp-for="CreatedAt" class="form-control"/>
             <span asp-validation-for="CreatedAt" class="text-danger"></span>
         </div>
     
         <div class="mt-3">
-            <button type="submit" class="btn btn-primary" aria-label="create">Create</button>
+            <button type="submit" class="btn btn-green" aria-label="create">Create</button>
             <a class="btn btn-secondary" asp-action="Details" asp-route-id=@Model.PostId aria-label="cancel">Cancel</a>
         </div>
     </form>
