--- a/FinalProject.Web/Views/User/ErrorNotAuthorised.cshtml
+++ b/FinalProject.Web/Views/User/ErrorNotAuthorised.cshtml
@@ -10,6 +10,6 @@
     <div class="card-body">
         <h4 class="card-title">Not Authorised</h4>
         <p class="card-text">You do not have the necessary privilege to access this feature.</p>
-        <a asp-controller="User" asp-action="Login" class="btn btn-primary">Login</a>
+        <a asp-controller="User" asp-action="Login" class="btn btn-green">Login</a>
     </div>
 </div>
