--- a/FinalProject.Web/Views/User/ForgotPassword.cshtml
+++ b/FinalProject.Web/Views/User/ForgotPassword.cshtml
@@ -22,7 +22,7 @@
         </div>
         
         <div class=" mt-3">
-            <input type="submit" value="Confirm" class="btn btn-primary" />
+            <input type="submit" value="Confirm" class="btn btn-green" />
             <a class="btn btn-secondary" asp-controller="User" asp-action="Login">Cancel</a>
         </div>
 
