--- a/FinalProject.Web/Views/User/Register.cshtml
+++ b/FinalProject.Web/Views/User/Register.cshtml
@@ -65,7 +65,7 @@
         </div> *@
 
         <div class="mt-3">
-            <input type="submit" value="Register" class="btn btn-primary" />
+            <input type="submit" value="Register" class="btn btn-green" />
             @* <a class="btn btn-secondary" asp-controller="User" asp-action="Login">Cancel</a> *@
             <a class="btn btn-link ms-3" asp-controller="User" asp-action="Login">Already have an account?</a>
         </div>
