--- a/FinalProject.Web/Views/User/Update.cshtml
+++ b/FinalProject.Web/Views/User/Update.cshtml
@@ -49,7 +49,7 @@
         </div>
 
         <div class="mt-3">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-green" />
             <a class="btn btn-secondary" asp-controller="User" asp-action="Index">Cancel</a>
         </div>
 
