--- a/FinalProject.Web/Views/User/UpdatePassword.cshtml
+++ b/FinalProject.Web/Views/User/UpdatePassword.cshtml
@@ -35,7 +35,7 @@
         </div>
 
         <div class="mt-3">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-green" />
             <a class="btn btn-secondary" asp-controller="Home" asp-action="Index">Cancel</a>
         </div>
 
