added images to seeder posts for the community posts details page

--- a/FinalProject.Web/Views/Gallery/Past.cshtml
+++ b/FinalProject.Web/Views/Gallery/Past.cshtml
@@ -159,3 +159,26 @@
         </div>
     </div>
 </div>
+
+<!-- Divider for sections -->
+<hr class="section-divider">
+
+<!-- Social Media Section -->
+<div class="social-media-section text-center">
+    <h2>Check us out on social media for more videos and images of our events!</h2>
+    <div class="social-icons">
+        <a href="https://www.facebook.com" target="_blank" class="social-link">
+            <i class="bi bi-facebook"></i>
+        </a>
+    
+        <a href="https://www.instagram.com" target="_blank" class="social-link">
+            <i class="bi bi-instagram"></i>
+        </a>
+
+        <a href="https://www.tiktok.com" target="_blank" class="social-link">
+            <i class="bi bi-tiktok"></i>
+        </a>
+    </div>
+</div>
+<!-- Divider for sections -->
+<hr class="section-divider">
