--- a/FinalProject.Web/Views/Shared/_NavBar.cshtml
+++ b/FinalProject.Web/Views/Shared/_NavBar.cshtml
@@ -45,7 +45,7 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li><a class="dropdown-item" asp-controller="County" asp-action="Index">Calendar</a></li>
+                            <li><a class="dropdown-item" asp-controller="County" asp-action="Index">County Events</a></li>
                         }
                     </ul>
                 </li>
