--- a/FinalProject.Web/Views/Event/Edit.cshtml
+++ b/FinalProject.Web/Views/Event/Edit.cshtml
@@ -46,9 +46,9 @@
         </div>
 
         <div class=" mt-3">
-            <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="submit" value="Create" class="btn btn-green" />
             
-            <a class="btn btn-link ms-3" asp-controller="Event" asp-action="Index">Cancel</a>
+            <a class="btn btn-greenn= ms-3" asp-controller="Event" asp-action="Index">Cancel</a>
         </div>
             
     </form>
