--- a/FinalProject.Web/Views/Post/Index.cshtml
+++ b/FinalProject.Web/Views/Post/Index.cshtml
@@ -12,7 +12,7 @@
 <!-- divider for sections-->
 <hr class="section-divider">
 
-<table class="table table-hover">
+<table class="table table-hover post-section">
     <thead>
         <tr>
             <th>
