added banners to users list and counties page

--- a/FinalProject.Web/Views/County/Index.cshtml
+++ b/FinalProject.Web/Views/County/Index.cshtml
@@ -1,7 +1,11 @@
 @model IList<County>
 
 
-<h1>Counties</h1>
+<!-- woof and wag banner -->
+<img src="~/images/banners/county.svg" class="banner-full-width img-fluid" alt="Counties page">
+
+<!-- divider for sections-->
+<hr class="section-divider">
 
 <table class="table county-table">
     <thead class="thead-light">
