--- a/FinalProject.Web/Views/Post/Details.cshtml
+++ b/FinalProject.Web/Views/Post/Details.cshtml
@@ -60,7 +60,7 @@
         <div class="col-4">
             @if (!string.IsNullOrEmpty(Model.ImagePath))
             {
-                <img src="@Url.Content(Model.ImagePath)" class="img-fluid w-50" alt="User Post Image" />
+                <img src="@Url.Content(Model.ImagePath)" class="img-fluid" alt="User Post Image" />
             }
             else
             {
