--- a/FinalProject.Web/Views/User/Index.cshtml
+++ b/FinalProject.Web/Views/User/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@model Paged<User>
 
-<h3 class="mb-3">User List</h3>
+<!-- woof and wag banner -->
+<img src="~/images/banners/users.svg" class="banner-full-width img-fluid" alt="Users banner">
+<!-- divider for sections-->
+<hr class="section-divider">
   
 <table class="table table-hover user">
     <thead>
