--- a/FinalProject.Web/Views/Event/Details.cshtml
+++ b/FinalProject.Web/Views/Event/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Event Details";
 }
 
-<div class="card rounded shadow p-4">
+<div class="card rounded shadow p-4 event-details">
     <div class="border-bottom d-flex align-items-center justify-content-between mb-3">
         <h3>@Model.Title</h3>
 
