--- a/FinalProject.Web/Views/Event/Edit.cshtml
+++ b/FinalProject.Web/Views/Event/Edit.cshtml
@@ -41,14 +41,14 @@
 
         <div class="mt-3">
             <label asp-for="ImageUrl" class="form-label"></label>
-            <input asp-for="ImageUrl" type="url" class="form-control" />
+            <input asp-for="ImageUrl" type="file" class="form-control" />
             <span asp-validation-for="ImageUrl" class="text-danger"></span>
         </div>
 
         <div class=" mt-3">
             <input type="submit" value="Create" class="btn btn-green" />
             
-            <a class="btn btn-greenn= ms-3" asp-controller="Event" asp-action="Index">Cancel</a>
+            <a class="btn btn-link ms-3" asp-controller="Event" asp-action="Index">Cancel</a>
         </div>
             
     </form>
