--- a/FinalProject.Web/Views/Post/Create.cshtml
+++ b/FinalProject.Web/Views/Post/Create.cshtml
@@ -15,7 +15,7 @@
         <div class="row mt-3">
             <div class="col">
                 <label asp-for="Title" class="form-label"> Title</label>
-                <input asp-for="Title" class="form-control" />
+                <input asp-for="Title" class="form-control" required/>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
         </div>
@@ -23,7 +23,7 @@
         <div class="row mt-3">
             <div class="col">
                 <label asp-for="Content" class="form-label"> Content</label>
-                <textarea asp-for="Content" class="form-control"></textarea>
+                <textarea asp-for="Content" class="form-control" required></textarea>
                 <span asp-validation-for="Content" class="text-danger"></span>
             </div>
         </div>
@@ -31,14 +31,14 @@
         <div class="row mt-3">
             <div class="col">
                 <label class="form-label" for="PostImage">Upload Image</label>
-                <input type="url" name="PostImage" class="form-control" accept="image/*" />
+                <input type="file" name="PostImage" class="form-control" accept="image/*" />
             </div>
         </div>
 
         <div class="row mt-3">
             <div class="col">
                 <label asp-for="CreatedBy" class="form-label"> Posted By: </label>
-                <input asp-for="CreatedBy" class="form-control"/>
+                <input asp-for="CreatedBy" class="form-control" required/>
                 <span asp-validation-for="CreatedBy" class="text-danger"></span>
             </div>
         </div>
@@ -57,52 +57,3 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
-
-
-@* @model Post
-
-<div class="card shadow p-4 mt-5 mx-auto w-75">
-  
-    <div class="position-absolute top-0 start-50 translate-middle rounded-circle bg-green p-2 icon">
-        <svg class="text-white" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 15V17M6 21H18C19.1046 21 20 20.1046 20 19V13C20 11.8954 19.1046 11 18 11H6C4.89543 11 4 11.8954 4 13V19C4 20.1046 4.89543 21 6 21ZM16 11V7C16 4.79086 14.2091 3 12 3C9.79086 3 8 4.79086 8 7V11H16Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-        </svg>
-    </div>
-    
-    <h3 class="my-3 mx-auto">Create Post</h3>
-    
-    <form asp-action="Create" method="post" enctype="multipart/form-data">
-
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
-        <div>
-            <label asp-for="Title" class="form-label"> Title</label>
-            <input asp-for="Title" class="form-control" />
-            <span asp-validation-for="Title" class="text-danger"></span>
-        </div>
-
-        <div class="mt-3">
-            <label asp-for="Content" class="form-label"> Content</label>
-            <textarea asp-for="Content" class="form-control"></textarea>
-            <span asp-validation-for="Content" class="text-danger"></span>
-        </div>
-
-        <div class="mt-3">
-            <label class="form-label" for="CommentImage">Upload Image</label>
-            <input type="file" name="CommentImage" class="form-control" accept="image/*" />
-        </div>
-
-        <div class="mt-3">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Index">Cancel</a>
-        </div>
-    </form>
-    
-</div>
-
-@section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
-} *@
