--- a/FinalProject.Web/Views/Post/Edit.cshtml
+++ b/FinalProject.Web/Views/Post/Edit.cshtml
@@ -8,7 +8,7 @@
         </svg>
     </div>
 
-    <h3 class="my-3 mx-auto">Edit Event</h3>
+    <h3 class="my-3 mx-auto">Edit Post</h3>
     <form asp-action="Edit" method="post">
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -35,7 +35,7 @@
 
         <div class="mt-3">
             <label asp-for="ImagePath" class="form-label">Update Image</label>
-            <input asp-for="ImagePath" type="url" class="form-control" />
+            <input type="file" asp-for="ImagePath" class="form-control" />
             <span asp-validation-for="ImagePath" class="text-danger"></span>
         </div>
 
@@ -46,7 +46,7 @@
         </div>
 
         <div class=" mt-3">
-            <input type="submit" value="Create" class="btn btn-primary" />
+            <input type="submit" value="Create" class="btn btn-green" />
             
             <a class="btn btn-link ms-3" asp-controller="Post" asp-action="Index">Cancel</a>
         </div>
